Fixed footer overflow

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -60,11 +60,19 @@
 }
 
 @media all and (max-width: 768px) {
+  .footer {
+    padding-top: 16.6rem;
+    padding-bottom: 8rem;
+  }
   .footer__text {
     gap: 4.8rem;
   }
 }
 @media all and (max-width: 505px) {
+  .footer {
+    padding-top: 25.3rem;
+    padding-bottom: 6.4rem;
+  }
   .footer__top {
     border: none;
     margin-bottom: 4rem;
@@ -76,7 +84,9 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     position: absolute;
     top: 5.9rem;
+    left: 0;
     width: 100%;
+    max-width: 32.7rem;
     content: "";
   }
   .nav-links {
