--- a/src/index.css
+++ b/src/index.css
@@ -207,3 +207,6 @@ button {
     padding: 0 2.4rem;
   }
 }
+* {
+  border: 1px solid red;
+}
